# TwitterBot

./: README.md  TODO.md  artists.txt  keep_alive.py  main.py  pyproject.toml
deezpy/: playlist.py  search.py  song.py
utils/: dowload.py  get_audio_image.py  get_functional_video.py  track_of_day.py  upload_tweet.py  video_generator.py
utils/data/: musics_passed.json  sentences.json
