[tool.poetry]
name = "twitterbot"
version = "0.1.0"
description = ""
authors = ["leopoldgoudier <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^4.5.0"
beautifulsoup4 = "^4.10.0"
html5lib = "^1.1"
bs4 = "^0.0.1"
lxml = "^4.8.0"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
